# skymeshsim

./: README.md  pyproject.toml  run_server.ps1  spain_dem.tif  testv1.py  testv2.py  testv3.py  testv4.py  testv5.py  testv6.py
src/skymeshsim/: __main__.py
src/skymeshsim/modules/core/: drone.py  drone2.py  navigation.py  simulation.py  vector.py
src/skymeshsim/modules/geometry/: drone.py
src/skymeshsim/modules/interface/: color_gradient.py
src/skymeshsim/network/: control_system.py  data_system.py  drone.py  independent_component.py  logger.py  messages.py  network_component.py  server.py  utils.py
src/skymeshsim/scripts/: run_windows_server.ps1
src/skymeshsim/services/: population.py  terrain.py  weather.py
