[project]
name = "skymeshsim"
authors = [{ name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com" }]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.3",
    "matplotlib==3.9.2",
    "numpy==2.1.3",
    "scipy==1.14.0",
    "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "mypy==1.13.0",
    "autopep8==2.3.1",
    "pydocstyle==6.3.0",
    "pycodestyle==2.12.1",
    "flake8==7.1.1",
    "black==24.10.0",
]
