[project]
name = "skymeshsim"
authors = [{ name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com" }]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "geemap==0.35.1",
    "geopandas==1.0.1",
    "matplotlib==3.9.2",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "rasterio==1.4.2",
    "requests==2.32.3",
    "scipy==1.14.0",
    "shapely==2.0.6",
]

[project.optional-dependencies]
dev = [
    "autopep8==2.3.1",
    "black==24.10.0",
    "flake8==7.1.1",
    "mypy==1.13.0",
    "pycodestyle==2.12.1",
    "pydocstyle==6.3.0",
    "pytest==8.3.3",
]
